--- a/public/style.css
+++ b/public/style.css
@@ -19,7 +19,12 @@ form div {
   margin: 1em;
   display: inline-block;
 }
-img{
+img {
   height: 20%;
-  width: 30%
+  width: 30%;
+}
+
+.card-img-top {
+  max-width: 100px;
+  max-height: 100px;
 }
