--- a/public/style.css
+++ b/public/style.css
@@ -24,6 +24,11 @@ img {
   width: 30%;
 }
 
+.git {
+  width: 30px;
+  height: 30px;
+}
+
 .card-img-top {
   max-width: 100px;
   max-height: 100px;
